--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,9 +1,7 @@
-@mixin main-font-center {
-    text-align: center;
-    font-weight: bold;
-}
+@use "./variables" as *;
 
-@mixin main-font-start {
-    text-align: start;
-    font-weight: bold;
+@mixin active-link {
+  color: $color-active-link;
+  border-bottom: 5px solid $color-active-link;
+  line-height: 75px;
 }
