feat: Jumbotron done

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,16 +1,28 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-family: sans-serif;
+  font-family: "PT Sans Narrow", sans-serif;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
+}
+
+.container {
+  width: 70%;
+  margin-inline: auto;
+}
+
+img {
+  width: 100%;
+  display: block;
 }
