feat: MainFooter done

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -26,3 +26,12 @@ img {
   width: 100%;
   display: block;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
